# riddle

./: .gitignore  README.md
boox-spike/: README.md  gradle.properties  settings.gradle.kts  update-2026-07-11.md
boox-spike/app/: build.gradle.kts
boox-spike/app/src/main/: AndroidManifest.xml
boox-spike/app/src/main/java/com/riddle/booxspike/: Epd.kt  MainActivity.kt  Oracle.kt  RawPen.kt  ReplyDsl.kt  Script.kt  TomView.kt
boox-spike/app/src/test/java/com/riddle/booxspike/: OracleTest.kt  ReplyDslTest.kt  ScriptTest.kt
quill/: README.md
quill/src/: epfb.cpp  epframebuffer.h  quill_c.cpp
riddle/: Cargo.toml  build-takeover.sh  external.manifest.json  oracle.env.example
riddle/scripts/: riddle-takeover.sh
riddle/src/: fb.rs  help.rs  ink.rs  main.rs  oracle.rs  power.rs  qtfb.rs  surface.rs  touch.rs
web/: README.md  e2e-smoke.mjs  index.html  mock-oracle.mjs  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: main.ts  oracle.ts  reply-dsl.ts  script.ts  style.css  tom-view.ts
web/src/llm/: anthropic.ts  index.ts  openai.ts  provider.ts  sse.ts
web/test/: llm-anthropic.test.ts  llm-openai.test.ts  oracle.test.ts  reply-dsl.test.ts  script.test.ts
